--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <article>
+    <h1>Abigail Laver</h1>
+    <section>
+    <p>I'm currently a PhD student in the Psycholgy Department at the University of Pennsylvania, working with <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> in his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
+  </section>
+<aside>
+</article>
 </body>
 </html>
