--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+body {
+  margin-left: 15px;
+  margin-right: 15px;
+}
 aside {
   width: 30%;
   padding-left: 15px;
