--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@ h1 {
     margin-bottom: 1.5rem;
     font-size: 3.2rem;
     line-height: 1;
+    background-color: rgb(202,232, 252);
 }
 body {
   margin-left: auto;
   margin-right: auto;
   padding-left: 12.5%;
+  background-color: rgb(202,232, 252);
 }
 aside {
   width: 30%;
