--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <style>
 html {
   font-size: 15px;
+  font-family: Georgia, serif;
+  background-color: rgb(248,254, 255);
 }
 h1 {
     font-weight: 400;
