--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ html {
   font-size: 15px;
   font-family: Georgia, serif;
   background-color: rgb(248,254, 255);
+  opacity: .96;
 }
 h1 {
     font-weight: 400;
@@ -12,13 +13,11 @@ h1 {
     margin-bottom: 1.5rem;
     font-size: 3.2rem;
     line-height: 1;
-    background-color: rgb(202,232, 252);
 }
 body {
   margin-left: auto;
   margin-right: auto;
   padding-left: 12.5%;
-  background-color: rgb(202,232, 252);
 }
 aside {
   width: 30%;
