--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@ html {
   background-color: rgb(248,254, 255);
   opacity: .96;
 }
+header {
+		background-color: #1f1815;
+		background-attachment: scroll,								fixed;
+		background-position: top left,							top left;
+		background-repeat: repeat,								no-repeat;
+		background-size: auto,								auto;
+		color: rgba(255, 255, 255, 0.5);
+		height: 100%;
+		left: 0;
+		padding: 8em 0 0 0;
+		position: fixed;
+		text-align: center;
+		top: 0;
+		width: 35%;
+	}
 h1 {
     font-weight: 400;
     margin-top: 4rem;
@@ -30,9 +45,11 @@ aside {
 </head>
 <body>
   <article>
-    <h1>Abigail Laver</h1>
+    <header>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="250" height="189">
+      <br><h1>Abigail Laver</h1>
+    </header>
     <section>
-    <aside><img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="250" height="189"></aside>
     <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
     <p> Before beginning grad school, I worked with <a href="https://psychology.yale.edu/people/richard-aslin">Dick Aslin</a> as a lab manager for two years in the <a href="https://medicine.yale.edu/childstudy/research/autism-and-neurodevelopment/llamb/">Language, Learning, and Multisensory Brain (LLAMB) Lab</a> at the <a href ="https://medicine.yale.edu/childstudy/">Yale Child Study Center</a>. I earned my BA in Psychology from the University of Pennsylvania in 2021.</p>
   </section>
