--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ header {
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto;
-		color: rgba(255, 255, 255, 0.5);
+		color: rgba(185, 214, 239);
 		height: 100%;
 		left: 0;
 		padding: 8em 0 0 0;
@@ -30,7 +30,7 @@ h1 {
     line-height: 1;
 }
 body {
-  margin-left: auto;
+  margin-left: 8em;
   margin-right: auto;
   padding-left: 12.5%;
 }
@@ -46,7 +46,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="250" height="189">
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="500" height="378">
       <br><h1>Abigail Laver</h1>
     </header>
     <section>
