--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ html {
   opacity: .96;
 }
 header {
-		background-color: #1f1815;
+		background-color: rgb(185, 214, 239);
 		background-attachment: scroll,								fixed;
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto;
-		color: rgba(185, 214, 239);
+		color: rgba(197, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
 		padding: 8em 0 0 0;
@@ -30,9 +30,9 @@ h1 {
     line-height: 1;
 }
 body {
-  margin-left: 8em;
+  margin-left: auto;
   margin-right: auto;
-  padding-left: 12.5%;
+  padding-left: 8em;
 }
 aside {
   width: 30%;
@@ -46,7 +46,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="500" height="378">
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="375" height=auto>
       <br><h1>Abigail Laver</h1>
     </header>
     <section>
