--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ header {
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								auto;
-		color: rgba(197, 255, 255, 0.5);
+		color: #3A3B3C;
 		height: 100%;
 		left: 0;
 		padding: 8em 0 0 0;
@@ -30,9 +30,9 @@ h1 {
     line-height: 1;
 }
 body {
-  margin-left: auto;
+  margin-left: 35%;
   margin-right: auto;
-  padding-left: 8em;
+  padding-left: 12.5%;
 }
 aside {
   width: 30%;
