--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 html {
   font-size: 15px;
   font-family: Georgia, serif;
+  color: #3A3B3C;
   background-color: rgb(248,254, 255);
   opacity: .96;
 }
@@ -32,7 +33,7 @@ h1 {
 body {
   margin-left: 35%;
   margin-right: auto;
-  padding-left: 12.5%;
+  width: calc(100% - 35%);
 }
 aside {
   width: 30%;
@@ -46,7 +47,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="375" height=auto>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width=25% height=auto>
       <br><h1>Abigail Laver</h1>
     </header>
     <section>
