--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" max-width=375 max-height=auto>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" max-width="375" max-height=auto>
       <br><h1>Abigail Laver</h1>
     </header>
     <section>
