--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@ h1 {
     font-size: 3.2rem;
     line-height: 1;
 }
-body {
+section {
   margin-left: 35%;
-  margin-right: 10%;
   padding: 8em 4em 4em 4em;
   width: calc(100% - 35%);
 }
