--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ html {
   font-size: 15px;
   font-family: Georgia, serif;
   color: #3A3B3C;
-  background-color: rgb(26,74, 152);
+  background-color: rgb(248,254, 255);
   opacity: .96;
 }
 header {
@@ -32,7 +32,7 @@ h1 {
 }
 section {
   margin-left: 35%;
-  margin-right: auto;
+  margin-right: 10%;
   padding: 8em 4em 4em 4em;
   width: calc(100% - 35%);
 }
