--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h1 {
 }
 section {
   margin-left: 35%;
-  margin-right: 10%;
+  max-width: 54em;
   padding: 8em 4em 4em 4em;
   width: calc(100% - 35%);
 }
