--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@ h1 {
     line-height: 1;
 }
 section {
-  margin-left: 35%;
+  margin-left: 10%;
+  margin-right: 10%;
   max-width: 54em;
   padding: 8em 4em 4em 4em;
-  width: calc(100% - 35%);
 }
 aside {
+  background-color: rgb(185, 214, 239);
   width: 30%;
   height: 100%
   padding-left: 15px;
