--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@ h1 {
     line-height: 1;
 }
 section {
-  margin-left: 10%;
+  margin-left: 35%;
   margin-right: 10%;
   max-width: 54em;
   padding: 8em 4em 4em 4em;
+  width: calc(100% - 35%);
 }
 aside {
-  background-color: rgb(185, 214, 239);
   width: 30%;
-  height: 100%
   padding-left: 15px;
   margin-left: 15px;
   float: right;
@@ -49,9 +48,11 @@ aside {
 </head>
 <body>
   <article>
+    <header>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="375" height=auto>
+      <br><h1>Abigail Laver</h1>
+    </header>
     <section>
-    <h1>Abigail Laver</h1>
-    <aside><img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="375" height=auto></aside>
     <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
     <p> Before beginning grad school, I worked with <a href="https://psychology.yale.edu/people/richard-aslin">Dick Aslin</a> as a lab manager for two years in the <a href="https://medicine.yale.edu/childstudy/research/autism-and-neurodevelopment/llamb/">Language, Learning, and Multisensory Brain (LLAMB) Lab</a> at the <a href ="https://medicine.yale.edu/childstudy/">Yale Child Study Center</a>. I earned my BA in Psychology from the University of Pennsylvania in 2021.</p>
   </section>
