--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ h1 {
 section {
   margin-left: 35%;
   margin-right: 10%;
-  max-width: 54em;
-  padding: 8em 4em 4em 4em;
+  padding-left: 15px;
+  margin-left: 15px;
   width: calc(100% - 35%);
 }
 aside {
@@ -49,7 +49,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width="375" height=auto>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "25vw" height=auto>
       <br><h1>Abigail Laver</h1>
     </header>
     <section>
