--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ h1 {
 }
 section {
   margin-left: 35%;
-  margin-right: 10%;
+  margin-right: 20%;
+  padding: 15px 15px 10px 10px;
   padding-left: 15px;
-  margin-left: 15px;
   width: calc(100% - 35%);
 }
 aside {
@@ -49,7 +49,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "25vw" height=auto>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "75%" height=auto>
       <br><h1>Abigail Laver</h1>
     </header>
     <section>
