change link settings
changed link settings to hopefully make it so links match normal font color whether visited or not

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ h1 {
     font-size: 3.2rem;
     line-height: 1;
 }
+a:link {
+  color: #3A3B3C;
+}
+a:visited {
+  color: #3A3B3C;
+}
 section {
   margin-left: 35%;
   margin-right: 20%;
