--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ aside {
     <header>
       <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "75%" height=auto>
       <br><h1>Abigail Laver</h1>
+      <h2>Contact:</h2>
+      <p>Email: alaver@sas.upenn.edu</p>
     </header>
     <section>
     <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
