address, icon images, formatting
added address, adjusted a few formatting things. added additional resources to potentially use

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ header {
 		position: fixed;
 		text-align: center;
 		top: 0;
-		width: 35%;
+		width: 25%;
 	}
 h1 {
     font-weight: 400;
@@ -37,11 +37,11 @@ a:visited {
   color: #3A3B3C;
 }
 section {
-  margin-left: 35%;
+  margin-left: 25%;
   margin-right: 20%;
   padding: 15px 15px 10px 10px;
   padding-left: 15px;
-  width: calc(100% - 35%);
+  width: calc(100% - 25%);
 }
 aside {
   width: 30%;
@@ -55,10 +55,11 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "75%" height=auto>
-      <br><h1>Abigail Laver</h1>
-      <h2>Contact:</h2>
-      <p>Email: alaver@sas.upenn.edu</p>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "70%" height=auto>
+      <h1>Abigail Laver</h1>
+      <h3>Contact:</h3>
+      <p>alaver@sas.upenn.edu</p>
+      <p>Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
     <section>
     <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
