--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta name="viewport" content="width=device-width initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <!-- Primary Meta Tags -->
+  <title>Abigail Laver</title>
+  <meta name="title" content="Abigail Laver"/>
+  <meta name="description" content="Personal website."/>
+</head>
 <style>
 html {
   font-size: 15px;
@@ -55,7 +63,7 @@ aside {
 <body>
   <article>
     <header>
-      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "70%" height=auto>
+      <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "72%" height=auto>
       <h1>Abigail Laver</h1>
       <h3>Contact:</h3>
       <p>alaver@sas.upenn.edu</p>
