--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ aside {
     <header>
       <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "72%" height=auto>
       <h1>Abigail Laver</h1>
-      <h3>Contact:</h3>
+      <p>Contact:</p>
       <p>alaver@sas.upenn.edu</p>
       <p>Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
