--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ section {
   margin-left: 25%;
   margin-right: 20%;
   padding: 15px 15px 10px 10px;
-  padding-left: 15px;
   width: calc(100% - 25%);
 }
 aside {
@@ -65,9 +64,21 @@ aside {
     <header>
       <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "72%" height=auto>
       <h1>Abigail Laver</h1>
-      <p>Contact:</p>
-      <p>alaver@sas.upenn.edu</p>
-      <p>Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
+      <p>Contact:
+      <br><svg id="icon-envelope" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 120 120" xml:space="preserve">
+          <polygon points="118.635,21.538 60.001,67.974 1.367,21.538 "/>
+          <polygon points="118.635,88.009 83.37,60.003 118.635,31.998 "/>
+          <polygon points="1.208,31.998 36.473,60.003 1.208,88.009 "/>
+          <polygon points="76.912,64.975 60.08,78.252 43.248,64.975 1.367,98.01 35.031,98.01 85.128,98.01 118.792,98.01 "/>
+          </svg>alaver@sas.upenn.edu
+          <br><svg id="icon-building" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 120 120" xml:space="preserve">
+            <rect x="2" y="108.1" width="116" height="11.9"/>
+            <rect x="6.744" y="96.582" width="104.979" height="6.543"/>
+            <rect x="15.288" y="38.532" width="17.639" height="52.925"/>
+            <rect x="50.484" y="38.532" width="17.639" height="52.925"/>
+            <rect x="84.33" y="38.532" width="17.639" height="52.925"/>
+            <polygon points="0,26.96 60,0 120,26.96 119.946,33.912 0,34.01 "/>
+            </svg>Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
     <section>
     <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
