--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ aside {
       <h1>Abigail Laver</h1>
       <p>Contact:
       <br><img src="https://alaver.github.io/resources/email.png" alt="email icon" width= "10%" height=auto>alaver@sas.upenn.edu
-      <br><img src="https://alaver.github.io/resources/location.jpeg" alt="location icon" width= "10%" height=auto>Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
+      <br><img src="https://alaver.github.io/resources/location.png" alt="location icon" width= "10%" height=auto>Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
     <section>
     <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
