--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ aside {
     <header>
       <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "72%" height=auto>
       <h1>Abigail Laver</h1>
-      <p>Contact:
+      <p style="text-align: left;">Contact:
       <br><img src="https://alaver.github.io/resources/email.png" alt="email icon" width= "5%" height=auto> alaver@sas.upenn.edu
       <br><img src="https://alaver.github.io/resources/location.png" alt="location icon" width= "5%" height=auto> Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
