--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ a:visited {
 section {
   margin-left: 25%;
   margin-right: 30%;
-  padding: 10px 100px 10px 20px;
-  width: calc(100% - 25%);
+  padding: 10px 35px 10px 5px;
+  width: calc(100% - 35%);
 }
 aside {
   width: 30%;
@@ -64,7 +64,7 @@ aside {
     <header>
       <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "72%" height=auto>
       <h1>Abigail Laver</h1>
-      <p style="text-align:left; padding-left:5px">Contact:
+      <p style="text-align:left; margin-left:5%">Contact:
       <br><img src="https://alaver.github.io/resources/email.png" alt="email icon" width= "5%" height=auto> alaver@sas.upenn.edu
       <br><img src="https://alaver.github.io/resources/location.png" alt="location icon" width= "5%" height=auto> Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
