--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a:visited {
 section {
   margin-left: 25%;
   margin-right: 30%;
-  padding: 30px 15px 10px 15px;
+  padding: 15% 10% 5% 10%;
   width: calc(100% - 35%);
 }
 aside {
@@ -64,7 +64,7 @@ aside {
     <header>
       <img src="https://alaver.github.io/resources/me_verona.jpeg" alt="website picture" width= "72%" height=auto>
       <h1>Abigail Laver</h1>
-      <p style="text-align:left; margin-left:5%">Contact:
+      <p style="font-size:.75em;text-align:left; margin-left:5%">Contact:
       <br><img src="https://alaver.github.io/resources/email.png" alt="email icon" width= "5%" height=auto> alaver@sas.upenn.edu
       <br><img src="https://alaver.github.io/resources/location.png" alt="location icon" width= "5%" height=auto> Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
