--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 html {
-  font-size: 20px;
+  font-size: 1.5em;
   font-family: Georgia, serif;
   color: #3A3B3C;
   background-color: rgb(235,235, 240);
@@ -47,7 +47,7 @@ a:visited {
 section {
   margin-left: 25%;
   margin-right: 30%;
-  padding: 10% 10% 5% 5%;
+  padding: 10% 5% 5% 5%;
   width: calc(100% - 35%);
 }
 aside {
