--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 html {
-  font-size: 1em;
+  font-size: 15px;
   font-family: Georgia, serif;
   color: #3A3B3C;
   background-color: rgb(235,235, 240);
