--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <style>
 html {
-  font-size: 15px;
+  font-size: 1rem;
+  font-size: clamp(1rem, 0.95rem + 0.25vw, 1.25rem);
   font-family: Georgia, serif;
   color: #3A3B3C;
   background-color: rgb(235,235, 240);
@@ -69,7 +70,7 @@ aside {
       <br><img src="https://alaver.github.io/resources/location.png" alt="location icon" width= "5%" height=auto> Stephen A. Levin Building<br>425 S. University Ave<br>Philadelphia, PA 19104</p>
     </header>
     <section>
-    <p>Hi! I'm currently a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
+    <p>Hi! I'm a PhD student in the <a href="https://psychology.sas.upenn.edu/">Psychology Department</a> at the <a href="http://www.upenn.edu/">University of Pennsylvania</a>. My advisor is <a href="https://psychology.sas.upenn.edu/people/john-trueswell">John Trueswell</a> and I'm a member of his <a href="https://web.sas.upenn.edu/trueswell-lab/">Language Learning Lab.</a></p>
     <p> Before beginning grad school, I worked with <a href="https://psychology.yale.edu/people/richard-aslin">Dick Aslin</a> as a lab manager for two years in the <a href="https://medicine.yale.edu/childstudy/research/autism-and-neurodevelopment/llamb/">Language, Learning, and Multisensory Brain (LLAMB) Lab</a> at the <a href ="https://medicine.yale.edu/childstudy/">Yale Child Study Center</a>. I earned my BA in Psychology from the University of Pennsylvania in 2021.</p>
   </section>
 <aside>
