--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="latex.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGHL6HQ2YZ"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGHL6HQ2YZ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-TGHL6HQ2YZ');
-    </script>
+    </script> -->
   </head>
 
   <body>
