--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="https://alaver.github.io/resources/me_verona.jpeg" alt="" /></a>
+								<img src="https://alaver.github.io/resources/me_verona.jpeg" alt="Me">
 								<header>
 									<h2>Abigail Laver</h2>
 								</header>
