--- a/index.html
+++ b/index.html
@@ -21,59 +21,45 @@
 						<h1><a href="index.html">Abigail Laver</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="#">Research</a></li>
+								<li><a href="#">Teaching</a></li>
+								<li><a href="#">CV</a></li>
+							</ul>
+						</nav>
+						<nav class="main">
+							<ul>
+								<li class="menu">
+									<a class="fa-bars" href="#menu">Menu</a>
+								</li>
 							</ul>
 						</nav>
 					</header>
 
-					<!-- Menu -->
+				<!-- Menu -->
 					<section id="menu">
-
-							<!-- Search -->
-							<section>
-								<form class="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</section>
 
 						<!-- Links -->
 							<section>
 								<ul class="links">
 									<li>
 										<a href="#">
-											<h3>Lorem ipsum</h3>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h3>Dolor sit amet</h3>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h3>Feugiat veroeros</h3>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<h3>Etiam sed consequat</h3>
-											</a>
-										</li>
-									</ul>
-								</section>
+											<h3>Research</h3>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<h3>Teaching</h3>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<h3>CV</h3>
+										</a>
+									</li>
+								</ul>
+							</section>
 
-							<!-- Actions -->
-								<section>
-									<ul class="actions stacked">
-										<li><a href="#" class="button large fit">Log In</a></li>
-									</ul>
-								</section>
-
-						</section>
+					</section>
 
 				<!-- Main -->
 					<div id="main">
