--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<h1><a href="index.html">Abigail Laver</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Research</a></li>
+								<li><a href="https://alaver.github.io/research.html">Research</a></li>
 								<li><a href="#">Teaching</a></li>
 								<li><a href="#">CV</a></li>
 							</ul>
@@ -42,7 +42,7 @@
 							<section>
 								<ul class="links">
 									<li>
-										<a href="#">
+										<a href="https://alaver.github.io/research.html">
 											<h3>Research</h3>
 										</a>
 									</li>
