--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="https://alaver.github.io/research.html">Research</a></li>
-								<li><a href="#">Teaching</a></li>
+								<li><a href="https://alaver.github.io/research.html">Teaching</a></li>
 								<li><a href="#">CV</a></li>
 							</ul>
 						</nav>
@@ -47,7 +47,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="#">
+										<a href="https://alaver.github.io/research.html">
 											<h3>Teaching</h3>
 										</a>
 									</li>
