--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Abigail Laver</a></h1>
+						<h1 style="font-size: 4rem;"><a href="index.html">Abigail Laver</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="https://alaver.github.io/research.html">Research</a></li>
-								<li><a href="https://alaver.github.io/research.html">Teaching</a></li>
+								<li><a href="https://alaver.github.io/teaching.html">Teaching</a></li>
 								<li><a href="#">CV</a></li>
 							</ul>
 						</nav>
@@ -47,7 +47,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="https://alaver.github.io/research.html">
+										<a href="https://alaver.github.io/teaching.html">
 											<h3>Teaching</h3>
 										</a>
 									</li>
