--- a/teaching.html
+++ b/teaching.html
@@ -47,7 +47,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="https://alaver.github.io/research.html">
+										<a href="https://alaver.github.io/teaching.html">
 											<h3>Teaching</h3>
 										</a>
 									</li>
